--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 #canvas-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    width: 640px;
+    height: 480px;
+    margin: 0 auto;
+    margin-top: 50px;
+    position: relative;
+  }
+  
+  canvas {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   
